# cdp_solax_daemon

./: CMakeLists.txt  Communication_Protocol_RS232_ES6548SOLAX.txt  README.md  solax.cfg  solax.service.in
include/rest/: Service.h
include/solax/: SerialAdapter.h  Telemetry.h
src/: CMakeLists.txt  Config.cpp  Config.h  RestService.cpp  RestService.h  solax.cpp
src/rest/: Service.cpp
src/solax/: OptionalValue.h  SerialAdapter.cpp  Telemetry.cpp
test/: CMakeLists.txt  test_aggregate.cpp  test_parse.cpp  test_serial_adapter.cpp
